@@ -5,7 +5,7 @@
  *
  * OGR support routines and data.
  *
- * $Id: ogr_sup.cpp,v 1.8 2008/12/30 20:58:43 andreasb Exp $
+ * $Id: ogr_sup.cpp,v 1.9 2008/12/31 00:26:17 kakace Exp $
 */
 #include <stdio.h>
 #include <string.h>
@@ -26,6 +26,10 @@ const char* ogr_errormsg(int errorcode)
    }
    return "unknown error";
 }
+
+/*==============================================================================
+** Legacy stub to string converstion routine.
+*/
 
 const char *ogr_stubstr_r(const struct Stub *stub,
                           char *buffer, unsigned int bufflen,
@@ -76,4 +80,72 @@ const char *ogr_stubstr(const struct Stub *stub)
 {
   static char buf[80];
   return ogr_stubstr_r(stub, buf, sizeof(buf), 0);
+}
+
+
+/*==============================================================================
+** OGR-NG stub to string converstion routine.
+** Display formats are based on the recommandations stated in bug #4082.
+*/
+
+const char *ogrng_stubstr_r(const struct OgrWorkStub *stub,
+                            char *buffer, unsigned int bufflen,
+                            int maxdiff /* 0 = stub only, >0 = how many diffs */)
+{
+  if (buffer && stub && bufflen)
+  {
+    char buf[80];
+    int i, len = (int)stub->stub.length;
+    
+    if (len > OGR_STUB_MAX) {
+      sprintf(buf, "(error:%d/%d)", (int)stub->stub.marks, len);
+    }
+    else {
+      sprintf(buf, "%d/", (int)stub->stub.marks);
+      if (len == 0) {
+        strcat(buf, "-");
+      }
+      else {
+        for (i = 0; i < len; i++) {
+          int diff = (int) stub->stub.diffs[i];
+          if (i+1 == len && stub->collapsed != 0) {
+            diff = (int) stub->collapsed;   // Restore initial stub diff.
+          }
+          sprintf(&buf[strlen(buf)], "%d", diff);
+          if (i+1 < len) {
+            strcat(buf, "-");
+          }
+          else if (maxdiff == 0 && stub->collapsed != 0) {
+            strcat(buf, "*");               // Indicate a combined stub.
+          }
+        }
+        if (maxdiff > 0 && stub->worklength > len) {
+          if (stub->collapsed != 0) {
+            // Combined stub : Display the current value of the last stub diff.
+            sprintf(&buf[strlen(buf)], "@%d", stub->stub.diffs[len-1]);
+          }
+          strcat(buf, "+");
+          for (i = len; i < stub->worklength && i < maxdiff; i++) {
+            if (i > len) {
+              strcat(buf, "-");
+            }
+            sprintf(&buf[strlen(buf)], "%d", (int)stub->stub.diffs[i]);
+          }
+        }
+      }
+    }
+    buffer[0] = '\0';
+    if (bufflen > 1) {
+      strncpy(buffer,buf,bufflen);
+      buffer[bufflen-1] = '\0';
+    }
+    return buffer;
+  }
+  return "";
+}
+
+const char *ogrng_stubstr(const struct OgrWorkStub *stub)
+{
+  static char buf[80];
+  return ogrng_stubstr_r(stub, buf, sizeof(buf), 0);
 }
